--- a/bipolar.rmd
+++ b/bipolar.rmd
@@ -12,6 +12,87 @@ Samsjuklighet/riskbeteenden.
 
 Prognos.
 
+## Från Goodwins bok
+
+Manic Depressive Illness [@Goodwin2007]
+
+Emil Kraepelin beskrev manodepressiv sjukdom, där han inkluderade "periodiskt och cirkulärt vansinne", "enkel mani", huvudperten av melankoli, och "amenti" (konfusionellt vansinne). Beskrivningar av bipolaritet finns redan från antiken, där exempelvis Soranus av Efesos skrev att "Themisons följare, liksom många andra, anser melankoli vara en form av sjukdomen mani." (p3)
+
+Kraepelin delade in sinnessjukdom i två huvudgrupper, manodepressivt vansinne och dementia praecox (schizofreni), där den första gruppen kännetecknades av ett episodiskt förloppet, ett mer godartad prognos, och ärflighet för manodepressiv sjukdom. I motsats såg Bleuler dessa två grupper som del av ett spektrum och indelade manodepressiv sjukdom i undergrupper. Han använde bland annat begreppet "affektiv sjukdom". (p6 ff).
+
+På 1950-talet föreslog Leonhard en indlningen i "bipolär" (för personer med depression och mani) och "monopolär" (återkommande depression). Man fann på 1960-talet att ärftlighet för bipolär sjukdom skiljde dessa två kategorier åt.
+
+Goodwin kritiserar att man i DSM-systemet fokuserar mer på polaritet än förlopp, och att den variant av unipolär depression som är frekvent återkommande därmed inte uppmärksammas (p8). I DSM kommer därför gruppen med "unipolär" depression att vara mer heterogen än tidigare indelningar. Tidigare krävdes för diagnos BP II (och I) mer strikt en affektiv episod med svårighet sådan att den krävde hospitalisering.
+
+### Åtskiljnad mellan bipolär och unipolär depression
+
+Depression vid biolärt syndrom (typ I eller II) karakteriseras, jämfört med unipolär depression, av yngre debutålder (och smalare pldersintervall för debut), fler episoder, kortare epidoder, längre sömntid än vid unipolär depression, mer normal personlighet, högre förekomst av samtidigt substansbrukssyndrom, och mer humörvängningar mellan episoder. Bipolär depression är lika vanligt hos män som hos kvinnor. Bipolärt syndrom har starkare ärftlighet (både avseende konkordans mellan monozygota tvillingar och förekomst av bipolaritet hos förstagradssläktingar). (p9) Det bör noteras att heterogeniteten är stor inom respektiva grupp (bipolär respektive unipolär depression).
+
+Vid bipolärt syndrom ses på gruppnivå ökad förekomst av depression höst/vinter och mani under vår/sommar. 
+
+Det kan vara så att bipolär depression svarar sämre på antidepressiv läkemedelsbehandling, vilka också kan ha sämre profylaktisk effekt. 
+
+Mönstret hos en individ med bipolärt syndrom kan vara exempelvis övervägande svåra maniska skov, och mindre svåra depressioner, eller tvärtom, och kan noteras som Md respektide mD, där mD motsvarar ungefär bipolär II (emedan md kan motsvara cyclotymi). 
+
+<!-- Angst indelade Bipolära syndrom i Md och Dm där stor bokstav = hospitalisering. -->
+
+Personer med frekvent återkommande unipolär depression liknar den bipolära gruppen i flera avseenden, tex tidig debutålder, förekomst av mani i familjen, atypiska drag, och profylaktisk effekt av litium. (p 12)
+
+#### Episodkarakteristika
+
+Mer framträdande vid unipolär depression: Ångest, somatiska symtom, psykomotorisk agitation, minskad aptit, insomningssvårigheter, smärtkänslighet, viktförlust.
+
+Mer framträdande vid bipolär depression: Psykomotorisk hämning, atypiska drag (?), mixed state, humörsvängningar inom episoden, irritabilitet, hypersomni, psykos, samtidigt substansbrukssyndrom, postpartumdepression.
+
+Bipolär II vs BP I depressiva episoder: BPI svårare, längre (? stämmer ej med tabbel p 9) depressionsepisoder med mer psykotiska symtom och agitation/irritabilitet, och fler sjukhusinläggningar. BP II dock längre total tid i depression (mer frekventa depressiva episoder).
+
+### Bipolär II
+
+Svårt att med säkerhet identifiera en episod med hypomani. Detta gör BPII-begreppet mer otydligt.
+
+### Utlösande faktorer
+
+Ljus och temperatur kan påverka förlopp och uttryck
+
+Yttre stress kan utlösa episoder tidigt i förlopet, men senare tycks episoderna komma utan sådana faktorer.
+
+### Differentialdiagnostik och samsjuklighet
+
+Viktiga diffdiagnoser: Schizofreni
+
+Identifiera komorbiditet: Substansbruk, obesitas, thyroideasjukdom, ångesttillstånd, ätstörning, migrän.
+
+Identifiera hypomanier hos personer med återkommande depression. Deprimerade patienter har ofta svårt att själva identifiera tidigare hypomanier, varför anhöriganamnes kan vara till god hjälp.
+
+### Sjukdomsbörda
+
+Depression är den främsta sjukdomsbördan vid bipolärt syndrom.
+
+Kvinnor med bipolär sjukdom har större inslag depression än män.
+
+Personer med täta depressiva skov liknar bipolärt syndrom i fråga om hereditet, debutålder, atypiska symtom och profylaktisk respons på litium.
+
+### Blandade episoder
+
+Vanligt med inslag av maniska symtom vid bipolär sjukdom i depressiv fas (70%) och vid MDD (25%). 
+
+Vid MDD är psykomotorisk agitation och irritabilitet de vanligaste "maniska" symtomen ("Agiterad depression" eller "Depressive mixed state"). 
+
+
+### Bipoärt spektrum
+
+Spektrum-konceptet: Kontinuitet till normala variationer i humör, energi och beteende, men även spektrum inom bipolaritet (=svårighetsgrad?)
+
+Spektrum även inom mani
+
+1/3 av de med cyklotymi och liknande besvär utvecklar bipolärt syndrom 
+
+Notera att om spektrumbegreppet drivs för långt blir det meningslöst och riskerar att beteckna det normala som patologiskt.
+
+
+
+
+
 ## Diagnostik
 
 Huvudkriteriet för diagnosen bipolär sjukdom är förekomst av mani (vid typ I) eller hypomani (vid typ II). Episoder med depression är inte obligat, men vanligt, och särskilt framträdande vid typ II.
